@@ -263,8 +263,11 @@ abstract class ApiBase extends ContextSource {
 			if ( $this->mustBePosted() ) {
 				$msg .= "\nThis module only accepts POST requests";
 			}
+			if ( $this->isDeprecated() ) {
+				$msg .= "\nThis module is deprecated";
+			}
 			if ( $this->isReadMode() || $this->isWriteMode() ||
-					$this->mustBePosted() ) {
+					$this->mustBePosted() || $this->isDeprecated() ) {
 				$msg .= "\n";
 			}
 
@@ -1451,6 +1454,14 @@ abstract class ApiBase extends ContextSource {
 	 * @return bool
 	 */
 	public function mustBePosted() {
+		return false;
+	}
+
+	/**
+	 * Indicates whether this module is deprecated.
+	 * @return bool
+	 */
+	public function isDeprecated() {
 		return false;
 	}
 
